<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp">

            <TextView
                android:text="@string/tv_totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tv_totalAmount"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@color/colorPrimary">

            <TextView
                android:text="@string/tv_ticket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/tv_ticketStartNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:layout_weight="2.5"/>

            <TextView
                android:text="@string/tv_ticketEndNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:layout_weight="2.5"/>

            <TextView
                android:text="@string/tv_ticketSell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/tv_ticketAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:layout_weight="2"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>